# cloudmorph-tessera

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  OPTIMIZATION_AND_IMPROVEMENT_PLAN.md  README.md  SECURITY.md  SONNET_REWRITE.md  SPEC.md  TODOS.md  WORKFLOW_REQUIRES_AWS_OIDC_SETUP.md  bandit.yaml  docker-compose.example.yaml  gitleaks-config.toml  pyproject.toml  semgrep.yaml  tessera.example.yaml  tokens.example.yaml
.github/: dependabot.yml
.github/workflows/: bench.yml  ci.yml  codeql.yml  examples-smoke.yml  release.yml  security.yml
_keep/: README.md
_keep/action_verbs/: action_verbs.py
_keep/audit/: __init__.py  chain.py
_keep/rego/: main.rego  main_test.rego  manifest.json
_keep/schemas/: job.schema.json  request.schema.json
arch/: README.md  file-inventory.md  nextsteps.md
arch/improvements/: arch-scan-tier-order-mismatch.md  code-audit-cognito-pool-hardcoded.md  code-audit-emitter-create-race.md  code-audit-license-jwt-import-fallback.md  code-audit-pack-status-filter-mismatch.md  v0.2.1-real-jwt-cdn-test.md  v0.3.0-oauth-full-resource-server.md  v0.3.0-price-table-consumer.md  v0.3.0-stripe-integration.md  v0.4.0-llm-providers-mistral-cohere.md
arch/status/: arch-scan-combinations-engine-resolved.md  code-audit-pack-status-filter-mismatch-resolved.md  combinations.md  control-plane-v0.7.0.md  integrations-and-cost.md  intelligence-and-licensing.md  llm-policy-authoring.md  overview.md  packaging-and-release.md  policy-engine.md  proxy-enforcement-and-audit.md
aws/executor/: Dockerfile  README.md
azure/executor/: Dockerfile  README.md
benchmarks/: README.md  bench-tessera.yaml  blast_radius_latency.py  decision_latency.py  mock_upstream.py  rps_sustained.py
benchmarks/results/: v0.4.0-production.md  v0.4.0.md  v0.5.x-suite.md  v0.6.0.md  v0.7.0.md  v0.7.2.md
cloudmorph-common-py/: README.md  pyproject.toml
cloudmorph-common-py/cloudmorph_common/: __init__.py  base_executor.py  client.py  env.py  errors.py  log.py  redact.py  secrets.py  settings.py  storage_pointers.py
cloudmorph-common-py/cloudmorph_common/artifacts/: __init__.py  base.py  blob.py  gcs.py  s3.py
cloudmorph-common-py/cloudmorph_common/audit/: canonical_json.py  emitter.py
cloudmorph-common-py/cloudmorph_common/audit/sinks/: __init__.py  s3.py
cloudmorph-common-py/tests/: test_action_verbs.py  test_buffered_sink.py  test_canonical_json.py  test_chain.py  test_client.py  test_emitter.py
cloudmorph-common-ts/: README.md  package.json  tsconfig.json
cloudmorph-common-ts/src/: action-verbs.ts  index.ts
cloudmorph-common-ts/tests/: action-verbs.test.ts  canonical-json.test.ts  chain.test.ts
cloudmorph-mcp/: .env.example  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
cloudmorph-mcp/src/: auth.ts  index.ts  ratelimit.ts  routes.ts  ws.ts
contracts/: approval.schema.json  audit_event.schema.json  intent_declaration.schema.json  job.schema.json  policy_bundle.schema.json  policy_decision.schema.json  redaction_rule.schema.json  request.schema.json  runtime_context.schema.json  session.schema.json  tool_call_request.schema.json
databricks/executor/: Dockerfile  README.md
docs/: ARCHITECTURE.md  AUDIT.md  CONFIGURATION.md  INSTALL.md  INTEGRATIONS.md  POLICIES.md  REPRODUCIBLE_BUILDS.md  ROADMAP.md  TROUBLESHOOTING.md  getting-started.md
docs/_internal/: blog-cross-post-drafts.md  cross-post-targets.md  dm-targets.md  launch-blog-draft.md  launch-day-checklist.md  launch-schedule.md  manual-actions.md
examples/cursor_hooks_demo/: README.md  SCREENCAST.md  hooks.json  mock_mcp_server.py  tessera.yaml  test.sh
examples/wrap_anthropic_sdk/: README.md  client.py  mock_github_mcp.py  tessera.example.yaml
examples/wrap_claude_code/: README.md  claude-config-example.json  tessera.example.yaml
examples/wrap_langchain/: README.md  agent.py  mock_github_mcp.py  tessera.example.yaml  tessera_tool_wrapper.py
examples/wrap_openai_sdk/: README.md  client.py  mock_github_mcp.py  tessera.example.yaml
examples/wrap_vscode_copilot/: .gitignore  README.md  (+1 more)
handbook/: README.md  how-tessera-is-built.md  the-90-day-roadmap.md  the-funding.md  the-pricing.md  the-security-commitment.md  the-team.md
plan/: megaprompt-halt.md  megaprompt-progress.md  nextsteps.md  session-cm-tessera.md  tessera-improvements-plan-2026-05-16.md
policies/: README.md  aws-bedrock-cost-ceiling-EXAMPLE.yaml  aws-cost-runaway-stop-EXAMPLE.yaml  aws-ec2-cost-cap-EXAMPLE.yaml  aws-iam-blast-radius-EXAMPLE.yaml  aws-region-allowlist-EXAMPLE.yaml  github-mcp-protection.yaml  jira-mcp-protection.yaml  non-prod-only.yaml  oversized-payload.yaml  owasp-mcp-prompt-injection.yaml  owasp-mcp-tool-poisoning.yaml  pii-block.yaml  postgres-mcp-protection.yaml  prod-protection.yaml  prompt-injection-heuristic.yaml  require-intent.yaml  salesforce-mcp-protection.yaml  slack-mcp-protection.yaml  tool-allowlist.yaml
recipes/: claude-code.md  cursor-hooks.md  cursor-mcp-json.md  generic-shell-hook.md
schemas/: audit_event.schema.json  config.schema.json  policy.schema.json
scripts/: bump_version.py  contracts-version-check.sh
sdk-python/: README.md  pyproject.toml
sdk-python/cloudmorph/: __init__.py  client.py
status/: 00_inventory.md  ARCHITECTURE.md  BUILD_PLAN.md  README.md
tessera/: __init__.py  _version.py  cli.py  cloud_sync.py  config.py  errors.py  intent.py  pluggable.py  proxy.py
tests/: _bench_kill_existing.sh  _bench_lib.sh  bench-01-block-path-latency.sh  bench-02-engine-microbench.py  bench-03-audit-overhead.sh  bench-04-concurrent-throughput.py  bench-05-multi-service-3way.sh  conftest.py  fakes.py  integration_cdn_smoke.py  run-all-benchmarks.sh  test_audit_cli.py  test_combinations.py  test_databricks_job_runner.py  test_llm_cohere.py  test_llm_mistral.py  test_oauth_resource_server.py  test_policies_default.py  test_python_sdk.py  test_ratelimit.py  test_snowflake_job_runner.py  test_unified_mcp_routing.py  test_v0_6_packs.py
(+315 files in other folders)
