# pyproject.toml — Tessera v0.1
# PyPI pre-flight: `tessera` is taken by an unrelated tessellation library (v0.10.0).
# Distribution name is cloudmorph-tessera; import name stays `tessera`.

[project]
name = "cloudmorph-tessera"
version = "0.1.0"
description = "The open-source MCP firewall for AI agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
    {name = "CloudMorph AI", email = "oss@cloudmorph.io"},
]
keywords = ["mcp", "firewall", "ai-agents", "policy", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "typer>=0.13.0",
    "regex>=2024.0.0",
    "watchdog>=4.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "hypothesis>=6.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
    "tzdata>=2024.0",
]
runtime = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "typer>=0.13.0",
    "regex>=2024.0.0",
    "watchdog>=4.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
tessera = "tessera.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tessera*"]

[tool.ruff]
line-length = 110
target-version = "py312"
extend-exclude = [
    "**/__pycache__",
    "**/*.egg-info",
    "**/dist",
    "**/build",
    "_keep/",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "S",
    "ASYNC",
    "C4",
    "ISC",
    "PIE",
    "RET",
    "SIM",
    "TID",
    "TCH",
]
ignore = [
    "E501",
    "S101",
    "S311",
    "TC001",   # app import into TYPE_CHECKING — we use from __future__ import annotations
    "TC003",   # stdlib import into TYPE_CHECKING — deferred by annotations
    "SIM105",  # contextlib.suppress — explicit try/except is more readable for error callbacks
    "S110",    # try-except-pass — legitimate in sink fan-out and close() methods
    "S112",    # try-except-continue — legitimate in policy reload loop
    "UP042",   # StrEnum — keep str+Enum for broader compatibility
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S104", "S105", "S106", "S108", "S301", "S311"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
disallow_any_unimported = true
exclude = [
    "_keep/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
testpaths = [
    "tests",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "adversarial: adversarial security fixtures",
    "slow: slow tests (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
branch = true
source = [
    "tessera",
]
omit = [
    "_keep/",
    "*/__init__.py",
    "*/tests/*",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
fail_under = 80
