# pyproject.toml — Tessera v0.1
# PyPI pre-flight: `tessera` is taken by an unrelated tessellation library (v0.10.0).
# Distribution name is cloudmorph-tessera; import name stays `tessera`.

[project]
name = "cloudmorph-tessera"
# BEFORE TAGGING — bump the version in ALL of these places (stale version in
# README renders on GitHub + PyPI project page and customers copy-paste the
# wrong image tag):
#   1. This line (version below)
#   2. tessera/__init__.py (__version__)
#   3. README.md — `tessera:<old>` → `tessera:<new>` AND `tessera <old>` → `tessera <new>`
#   4. docs/INSTALL.md — same search & replace
#   5. CHANGELOG.md — add a new section
version = "0.3.0"
description = "The open-source MCP firewall for AI agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
    {name = "CloudMorph AI", email = "oss@cloudmorph.io"},
]
keywords = ["mcp", "model-context-protocol", "firewall", "security", "policy-as-code", "ai-agents", "audit", "cursor", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking :: Firewalls",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    "typer==0.25.1",
    "regex==2026.4.4",
    "watchdog==6.0.0",
    "PyYAML==6.0.3",
    "jmespath>=1.0.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "hypothesis==6.152.4",
    "ruff==0.15.12",
    "mypy==1.20.2",
    "pre-commit==4.6.0",
    "httpx==0.28.1",
    "respx==0.23.1",
    "tzdata==2026.2",
    "jsonschema==4.23.0",
    "bandit==1.9.4",
    "pip-audit==2.10.0",
    "cyclonedx-bom==7.3.0",
    # semgrep installed separately in CI (conflicts with click on Python 3.13+)
]
runtime = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    "typer==0.25.1",
    "regex==2026.4.4",
    "watchdog==6.0.0",
    "PyYAML==6.0.3",
]
aws = ["mcp-proxy-for-aws>=1.4.0,<2.0.0", "boto3>=1.34.0,<2.0.0"]
gemini = ["google-genai>=2.0.0,<3.0.0"]
anthropic = ["anthropic>=0.30.0"]
openai = ["openai>=1.30.0"]
bedrock = ["boto3>=1.34.0,<2.0.0"]
azure-openai = ["openai>=1.30.0", "azure-identity>=1.15.0"]
oidc = ["python-jose[cryptography]>=3.3.0", "httpx>=0.27.0"]
all-llm = ["google-genai>=2.0.0,<3.0.0", "anthropic>=0.30.0", "openai>=1.30.0", "azure-identity>=1.15.0"]
intelligence = ["cryptography>=42.0.0"]
infracost = ["gql[all]>=3.5.0"]

[project.scripts]
tessera = "tessera.cli:app"

[project.urls]
Homepage = "https://github.com/CloudMorphAI/cloudmorph-tessera"
Repository = "https://github.com/CloudMorphAI/cloudmorph-tessera"
Documentation = "https://cloudmorph.ai/docs"
Changelog = "https://github.com/CloudMorphAI/cloudmorph-tessera/blob/main/CHANGELOG.md"
Issues = "https://github.com/CloudMorphAI/cloudmorph-tessera/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tessera*"]

[tool.setuptools.package-data]
tessera = [
    "intelligence/*.pem",
    "intelligence/*.json",
    "policies_default/*.yaml",
]

[tool.ruff]
line-length = 110
target-version = "py312"
extend-exclude = [
    "**/__pycache__",
    "**/*.egg-info",
    "**/dist",
    "**/build",
    "_keep/",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "S",
    "ASYNC",
    "C4",
    "ISC",
    "PIE",
    "RET",
    "SIM",
    "TID",
    "TCH",
]
ignore = [
    "E501",
    "S101",
    "S311",
    "TC001",   # app import into TYPE_CHECKING — we use from __future__ import annotations
    "TC003",   # stdlib import into TYPE_CHECKING — deferred by annotations
    "SIM105",  # contextlib.suppress — explicit try/except is more readable for error callbacks
    "S110",    # try-except-pass — legitimate in sink fan-out and close() methods
    "S112",    # try-except-continue — legitimate in policy reload loop
    "UP042",   # StrEnum — keep str+Enum for broader compatibility
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S104", "S105", "S106", "S108", "S301", "S311", "S603", "S607"]
"examples/**/mock_*.py" = ["S104"]  # local-only mock upstream servers may bind 0.0.0.0
"examples/cursor_hooks_demo/mock_mcp_server.py" = ["S104"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
disallow_any_unimported = true
exclude = [
    "_keep/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
testpaths = [
    "tests",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "adversarial: adversarial security fixtures",
    "slow: slow tests (deselect with '-m \"not slow\"')",
    "examples: smoke tests for the worked examples under examples/",
]

[tool.coverage.run]
branch = true
source = [
    "tessera",
]
omit = [
    "_keep/",
    "*/__init__.py",
    "*/tests/*",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
fail_under = 80
