[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudmorph-common"
version = "0.1.0"
description = "Shared lib for CloudMorph executors and SDK — BaseExecutor, ControlCenterClient, AuditEmitter"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{name = "CloudMorph", email = "engineering@cloudmorph.io"}]
keywords = ["cloudmorph", "mcp", "agent-governance", "common"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
aws = ["boto3>=1.34.0"]
gcp = ["google-cloud-storage>=2.16.0"]
azure = ["azure-storage-blob>=12.20.0"]
all = [
    "boto3>=1.34.0",
    "google-cloud-storage>=2.16.0",
    "azure-storage-blob>=12.20.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://cloudmorph.io"
Repository = "https://github.com/CloudMorphAI/cloudmorph-control-center"

[tool.setuptools.packages.find]
include = ["cloudmorph_common*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
cloudmorph_common = ["py.typed"]
