[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudmorph"
version = "0.1.0b1"
description = "CloudMorph Control Centre SDK — govern AI agents across multi-cloud."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [{name = "CloudMorph", email = "sdk@cloudmorph.io"}]
keywords = ["cloudmorph", "mcp", "multi-cloud", "agent", "governance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://cloudmorph.io"
Documentation = "https://docs.cloudmorph.io/sdk/python"
Repository = "https://github.com/cloudmorph/cloudmorph-control-center"

[tool.setuptools.packages.find]
include = ["cloudmorph*"]
