[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudmorph"
version = "0.1.0"
description = "Python SDK for CloudMorph — govern AI agent cloud actions"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{name = "CloudMorph", email = "sdk@cloudmorph.io"}]
keywords = ["cloudmorph", "mcp", "multi-cloud", "agent", "governance"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://cloudmorph.io"
Documentation = "https://docs.cloudmorph.io/sdk/python"
Repository = "https://github.com/cloudmorph/cloudmorph-control-center"

[tool.setuptools.packages.find]
include = ["cloudmorph*"]
